# nvm-wormhole

./: Cargo.toml  LICENSE.md  NOTICE  README.md
crates/nvm-sdf/: Cargo.toml
crates/nvm-sdf/src/: lib.rs
crates/nvm-sdf/src/dim2/: mod.rs
crates/nvm-sdf/src/dim2/operation/: boolean.rs  mod.rs  unary.rs
crates/nvm-sdf/src/dim2/shape/: circle.rs  line.rs  misc.rs  mod.rs  polygon.rs  rect.rs  triangle.rs
crates/nvm-sdf/src/dim2/transform/: affine.rs  mirror.rs  mod.rs  repeat.rs
crates/nvm-sdf/src/dim2/tree/: mod.rs
crates/nvm-wormhole/: Cargo.toml
crates/nvm-wormhole/src/: main.rs  world.rs
crates/shim-nvm-sdf-gpu/: Cargo.toml  rust-toolchain.toml
crates/shim-nvm-sdf-gpu/output/: main.spv
crates/shim-nvm-sdf-gpu/shaders/main/: Cargo.toml
crates/shim-nvm-sdf-gpu/shaders/main/src/: lib.rs
crates/shim-nvm-sdf-gpu/src/: main.rs
