[package]
name = "nvm-sdf"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["glam/std", "num-traits/std"]
libm = ["glam/libm"]

[dependencies]
glam = { version = "0.20.2", default-features = false, features=["bytemuck"] }
num-traits = { version = "0.2", default-features = false, features=[] }
num-derive = { version = "0.3", default-features = false, features=[] }
bytemuck = "1.8.0"